frontend/src/ui/assets/css/styling/table.css
table.v-table {
    --side-padding: 1rem;
    @apply w-full;
    margin-left: calc(-1 * var(--side-padding));
    margin-right: calc(-1 * var(--side-padding));
    width: calc(100% + calc(2 * var(--side-padding)));
}

@media (min-width: 768px) {
    table.v-table {
        --side-padding: 1.5rem;
    }
}

.v-table thead tr {
    @apply bg-transparent text-sm font-bold text-onsurface-variant;
}

.v-table th {
    @apply font-bold;
    @apply px-4 pb-4 pt-8 text-left;
}

.v-table th[data-sortby] {
    white-space: nowrap;
    cursor: pointer;
    padding-right: 2em;
}

.v-table th[data-sortby]:after {
    content: '▼';
    width: 1em;
    font-size: 0.675em;
    margin-left: 0.75em;
    margin-top: 0.15em;
    overflow: hidden;
    opacity: 0.2;
}

.v-table th[data-sortby]:hover:after {
    content: '▼';
    opacity: 1;
}

.v-table th.sort.asc:after {
    content: '▼';
    opacity: 1;
}

.v-table th.sort.desc:after {
    content: '▲';
    opacity: 1;
}

.v-table td {
    @apply px-2 py-4 text-left md:px-4;
}

.v-table tbody td {
}

.sticky-table-header .v-table th {
    @apply sticky top-12 z-10 bg-surface pt-4 xl:top-0;
}

.sticky-table-header .v-table th:before {
    content: '';
    @apply absolute bottom-0 left-0 right-0 top-0;
    @apply border-b border-primary-container;
}

.v-table th:first-child,
.v-table td:first-child {
    padding-right: var(--side-padding) !important;
    @apply w-0 border-none pl-0 pr-4;
}

.v-table td:first-child::before {
    @apply rounded-l-2xl;
}

.v-table th:last-child,
.v-table td:last-child {
    padding-left: var(--side-padding) !important;
    @apply w-0 border-none pr-0;
}

.v-table th:nth-child(2),
.v-table td:nth-child(2) {
    @apply pl-0;
}

.v-table th:nth-last-child(2),
.v-table td:nth-last-child(2) {
    @apply pr-0;
}

.no-header .v-table thead {
    @apply hidden;
}

.v-table tbody tr {
    @apply relative z-10;
}

/* normal */
.v-table tbody tr td:first-child::before {
    content: '';
    @apply absolute bottom-1 left-0 right-0 top-1 -z-10 rounded-xl bg-surface-container-low;
}

/* hover */
.interactive-table:not(.loading) .v-table tbody tr:not(.no-data):hover td:first-child::before {
    @apply bg-surface-container;
}

.interactive-table:not(.loading) .v-table tbody tr:not(.no-data) {
    @apply cursor-pointer;
}

/* selected */
.v-table tbody tr:not(.no-data).selected td {
    @apply text-onprimary-container !important;
}

.v-table tbody tr:not(.no-data).selected td::before {
    @apply bg-primary-container !important;
}

.v-table td.p-0 {
    padding: 0 !important;
}

.v-table td.px-0 {
    padding-left: 0 !important;
    padding-right: 0 !important;
}

.v-table td.py-0 {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
}

.v-table td.pt-0 {
    padding-top: 0 !important;
}

.v-table td.pb-0 {
    padding-bottom: 0 !important;
}

.with-multi-selection .v-table,
.interactive-table .v-table {
    @apply select-none;
}

